Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:42:15: error: storage size of 'ball' isn't known
     int ball [];
               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:45:20: warning: declaration of 'ball' shadows a previous local [-Wshadow]
         Ball ball[x] = { rand() % W,  rand() % H,
                    ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:42:9: warning: shadowed declaration is here [-Wshadow]
     int ball [];
         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:49:86: error: variable-sized object 'ball' may not be initialized
                         RGB(50 + rand() % 200, 50 + rand() % 200, 50 + rand() % 200) };
                                                                                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:45:14: warning: unused variable 'ball' [-Wunused-variable]
         Ball ball[x] = { rand() % W,  rand() % H,
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:53:21: warning: value computed is not used [-Wunused-value]
                   1 + rand() % 9, 1 + rand() % 9,
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:53:37: warning: value computed is not used [-Wunused-value]
                   1 + rand() % 9, 1 + rand() % 9,
                                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:54:22: warning: value computed is not used [-Wunused-value]
                   15 + rand() % 35,
                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:55:32: warning: right operand of comma operator has no effect [-Wunused-value]
                   TX_LIGHTRED, TX_RED };
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:55:39: error: expected ';' before '}' token
                   TX_LIGHTRED, TX_RED };
                                       ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:55:39: warning: right operand of comma operator has no effect [-Wunused-value]
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: At global scope:
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:58:19: error: expected unqualified-id before numeric constant
                   1 + rand() % 9, 1 + rand() % 9,
                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:60:43: error: expected declaration before '}' token
                   TX_LIGHTGREEN, TX_GREEN };
                                           ^
---------------------------------------------------------------------------------------------
[11.06.2021 12:53:23,96 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
